tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedWhile.php
<?php

declare(strict_types=1);

while (false) {
}
